# mimiq-qiskit

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  primitives.html  pyproject.toml  quickstart.html  search.html  searchindex.js  wrapping_local_backends.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  primitives.doctree  quickstart.doctree  wrapping_local_backends.doctree
.github/workflows/: documentation.yml  pypi.yml  test.yml
_modules/: index.html
_modules/mimiq_qiskit/: backend.html  converter.html  job.html  primitives.html  provider.html
_sources/: index.rst.txt  installation.rst.txt
docs/: api.rst  conf.py  installation.rst  primitives.rst  quickstart.rst  wrapping_local_backends.rst
examples/: expectation_values.py  sampling.py
src/mimiq_qiskit/: __init__.py  backend.py  converter.py  gate_map.py  job.py  primitives.py  provider.py  result.py
tests/: test_backend.py  test_converter.py  test_primitives.py
